# src/controllers/order.controller.ts
@@ -147,4 +147,21 @@ export default {
       response.error(res, error, "failed to cancelled an order");
     }
   },
+
+  async remove(req: IReqUser, res: Response) {
+    try {
+      const { orderId } = req.params;
+      const result = await OrderModel.findByIdAndDelete(
+        {
+          orderId,
+        },
+        { new: true }
+      );
+      if (!result) return response.notFound(res, "order not found");
+
+      response.success(res, result, "success to remove an order");
+    } catch (error) {
+      response.error(res, error, "failed to remove an order");
+    }
+  },
 };
