# src/routes/api.ts
@@ -150,6 +150,18 @@ router.get(
   */
 );
 
+router.delete(
+  "/orders/:orderId/remove",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  orderController.remove
+  /*
+  #swagger.tags = ['Order']
+  #swagger.security = [{
+    "bearerAuth": ""
+  }]
+  */
+);
+
 router.post(
   "/banners",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
